# FastAPI_test

./: alembic.ini  pyproject.toml
alembic_migrations/: env.py
app/: config.py  main.py
app/api/appointments/: models.py  router.py  schemas.py  services.py
app/api/auth/: router.py  schemas.py  services.py  utils.py
app/api/user/: crud.py  models.py  router.py  schemas.py
