[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Alangard <73427768+Alangard@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.2"
alembic = "^1.13.3"
sqlalchemy = "^2.0.36"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.5.2"
python-dotenv = "^1.0.1"
uvicorn = "^0.32.0"
gunicorn = "^23.0.0"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.10"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
jwt = "^1.3.1"
python-jose = "^3.3.0"
bcrypt = "^4.2.0"
pyjwt = "^2.9.0"
python-multipart = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
